--- a/src/app/config.json
+++ b/src/app/config.json
@@ -12,6 +12,11 @@
   },
   "p2": {
     "id": "player2",
-    "startPos": []
+    "startPos": [{ "x": -2, "y": 0 }, { "x": -2, "y": -1 }, { "x": -2, "y": -2 }]
+  },
+  "difficulty": {
+    "easy": 0.75,
+    "normal": 0.85,
+    "hard": 0.95
   }
 }
